// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.detailed is false snapshot test 1`] = `
<div
  className="simple-locations-list"
>
  <List
    bordered={false}
    dataSource={Array []}
    itemLayout="vertical"
    loading={false}
    pagination={false}
    prefixCls="ant-list"
    renderItem={[Function]}
    size="small"
    split={true}
  />
</div>
`;

exports[`props.detailed is true props.detailed true snapshot test 1`] = `
<div
  className="detailed-locations-list"
>
  <List
    bordered={false}
    dataSource={Array []}
    itemLayout="vertical"
    loading={false}
    pagination={
      Object {
        "onChange": [Function],
        "pageSize": 2,
      }
    }
    prefixCls="ant-list"
    renderItem={[Function]}
    size="small"
    split={true}
  />
</div>
`;
